--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ jdk:
 node_js:
 - '0.10'
 
+env:
+- TERM=dumb
+
 script:
 - './gradlew check'
+
+after_success:
+- ./gradlew jacocoTestReport coveralls
+
 
