--- a/wikiboot-core/build.gradle
+++ b/wikiboot-core/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
     compile("com.fasterxml.jackson.core:jackson-databind")
     compile("com.google.guava:guava:17.0")
-    compile("org.apache.commons:commons-lang3:3.3.2") // remove? not in use
+    compile("org.apache.commons:commons-lang3:3.3.2")
     compile 'org.hibernate:hibernate-validator'
 
     compile("org.javatuples:javatuples:1.2")
