--- a/wikiboot-client/package.json
+++ b/wikiboot-client/package.json
@@ -4,20 +4,20 @@
   "description": "Wikiboot client app",
   "dependencies": {},
   "devDependencies": {
-    "bower": "1.3.8",
+    "bower": "1.3.9",
     "connect-livereload": "^0.4.0",
-    "gulp": "3.8.5",
-    "gulp-angular-templatecache": "^1.2.1",
+    "gulp": "3.8.7",
     "gulp-bower-src": "0.1.0",
     "gulp-cram": "0.2.0",
-    "gulp-filter": "0.5.0",
-    "gulp-imagemin": "0.6.1",
-    "gulp-less": "1.3.1",
-    "gulp-minify-css": "0.3.6",
-    "gulp-uglify": "0.3.1",
-    "gulp-util": "2.2.19",
-    "imagemin-pngcrush": "0.1.0",
-    "tiny-lr": "0.0.9"
+    "gulp-filelog": "^0.2.0",
+    "gulp-filter": "1.0.1",
+    "gulp-less": "1.3.5",
+    "gulp-minify-css": "0.3.8",
+    "gulp-ng-annotate": "^0.3.0",
+    "gulp-sourcemaps": "^1.1.4",
+    "gulp-uglify": "1.0.1",
+    "gulp-util": "3.0.1",
+    "tiny-lr": "0.1.1"
   },
   "scripts": {
     "prepublish": "bower install --config.interactive=false",
